# promptaudit

./: .gitignore  README.md  pyproject.toml
.claude/skills/prompt-audit/: SKILL.md
.github/workflows/: ci.yml
examples/: sample_report.md
src/promptaudit/: __init__.py  cli.py  defaults.py  evaluator.py  generator.py  models.py  reporter.py  runner.py  skill.py
src/promptaudit/attacks/: __init__.py  direct.yaml
tests/: test_evaluator.py  test_generator.py  test_reporter.py
