[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "promptaudit"
version = "0.1.0"
description = "AI-Powered Prompt Injection Red-Team Automation Skill"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "litellm>=1.40",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
promptaudit = "promptaudit.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/promptaudit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:asyncio"

[tool.ruff]
line-length = 100
